# dadit

./: .editorconfig  README.md  devenv.nix  pyproject.toml
.github/workflows/: ci.yml
dadit/: json.py  json_patch.py  main.py
dadit/commands/: patch.py
dadit/tree_sitter/: document.py  edit.py  selector.py
dadit/yaml/: edit.py  edit_test.py  parse.py  parse_test.py  serialization.py
